--- a/App Playlist Music/index.html
+++ b/App Playlist Music/index.html
@@ -10,9 +10,12 @@
     <title>
         Music Player App
     </title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Lato&display=swap" rel="stylesheet" />
+    <link class="icon" rel="icon" href="favi_icon.ico" type="image/x-icon" >
 </head>
 
 <body>
+
     <div class="container">
         <div class="player">
             <div class="player-bar">
@@ -28,9 +31,9 @@
             </div>
             <div class="player-content">
                 <div id="player-album-art">
-                    <img src="https://s3.amazonaws.com/org.freecodecamp.mp3-player-project/quincy-larson-album-art.jpg"
-                        alt="song cover art" />
+                    <img id="imagenes" src="imagenes/caratula.png" alt="song cover art" />
                 </div>
+
                 <div class="player-display">
                     <div class="player-display-song-artist">
                         <p id="player-song-title"></p>
@@ -72,6 +75,13 @@
                             </svg>
                         </button>
                     </div>
+                    <div class="player-timer">
+                        <span id="current-time">0:00</span> / <span id="total-time">0:00</span>
+                    </div>
+                    <div class="time-bar">
+                        <input type="range" id="song-progress" value="0" min="0" max="100" step="1" />
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -87,9 +97,15 @@
                     <div></div>
                 </div>
             </div>
-            <ul id="playlist-songs"></ul>
+            <ul id="playlist-songs" ></ul>
         </div>
     </div>
+
+    <footer>
+        <p>&copy; 2024 <a href="https://portafolio-misael.netlify.app/">Misael Beriguete</a>. Todos los derechos reservados.</p>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="script.js"></script>
 </body>
 
