--- a/App Playlist Music/index.html
+++ b/App Playlist Music/index.html
@@ -5,17 +5,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Mono&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
-    <title>
-        Music Player App
-    </title>
+    <title>Music Player App</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Lato&display=swap" rel="stylesheet" />
-    <link class="icon" rel="icon" href="favi_icon.ico" type="image/x-icon" >
+    <link class="icon" rel="icon" href="favi_icon.ico" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6987307398293421"
+        crossorigin="anonymous"></script>
 </head>
 
-<body>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-6987307398293421",
+        enable_page_level_ads: true
+    });
+</script>
 
+<body style="background-color: #1b1b32;">
+    <meta name="google-adsense-account" content="ca-pub-6987307398293421">
     <div class="container">
         <div class="player">
             <div class="player-bar">
@@ -30,11 +36,11 @@
                 </div>
             </div>
             <div class="player-content">
-               
+
                 <div id="player-album-art">
                     <img id="imagenes" src="imagenes/caratula.png" alt="song cover art" />
                 </div>
-                
+
                 <div class="player-display">
                     <div class="player-display-song-artist">
                         <p id="player-song-title"></p>
@@ -80,12 +86,14 @@
                         <span id="current-time">0:00</span> / <span id="total-time">0:00</span>
                     </div>
                     <div class="time-volume-controls">
-                    <div class="time-bar">
-                        <input type="range" id="song-progress" value="0" min="0" max="100" step="1" />
+                        <div class="time-bar">
+                            <input type="range" id="song-progress" class="form-control" value="0" min="0" max="100"
+                                step="1" />
+                        </div>
+                        <label for="volume-control">📢</label>
+                        <input type="range" id="volume-control" class="form-control" value="100" min="0" max="100"
+                            step="1" />
                     </div>
-                    <label for="volume-control">📢</label>
-        <input type="range" id="volume-control" value="100" min="0" max="100" step="1" />
-                </div>
                 </div>
             </div>
         </div>
@@ -101,12 +109,13 @@
                     <div></div>
                 </div>
             </div>
-            <ul id="playlist-songs" ></ul>
+            <ul id="playlist-songs" class="list-group"></ul>
         </div>
     </div>
 
-    <footer>
-        <p>&copy; 2024 <a href="https://portafolio-misael.netlify.app/" target="_blank">Misael Beriguete</a>. Todos los derechos reservados.</p>
+    <footer class="mt-5">
+        <p class="text-center">&copy; 2024 <a class="link" href="https://portafolio-misael.netlify.app/" target="_blank">Misael
+                Beriguete</a>. Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
