--- a/App Playlist Music/index.html
+++ b/App Playlist Music/index.html
@@ -85,15 +85,16 @@
                     <div class="player-timer">
                         <span id="current-time">0:00</span> / <span id="total-time">0:00</span>
                     </div>
+
                     <div class="time-volume-controls">
                         <div class="time-bar">
-                            <input type="range" id="song-progress" class="form-control" value="0" min="0" max="100"
-                                step="1" />
+                            <input type="range" id="song-progress" class="form-control time-input" value="0" min="0" max="100" step="1" />
                         </div>
-                        <label for="volume-control">📢</label>
-                        <input type="range" id="volume-control" class="form-control" value="100" min="0" max="100"
-                            step="1" />
+                        <label for="volume-control">🔊</label>
+                        <input type="range" id="volume-control" class="form-control volume-input" value="100" min="0" max="100" step="1" />
                     </div>
+                    
+                    
                 </div>
             </div>
         </div>
