--- a/App Playlist Music/index.html
+++ b/App Playlist Music/index.html
@@ -103,12 +103,17 @@
                 <div class="parallel-lines">
                     <div></div>
                     <div></div>
+                    
                 </div>
                 <h2 class="playlist-title" id="playlist">Playlist</h2>
                 <div class="parallel-lines">
                     <div></div>
                     <div></div>
                 </div>
+            </div>
+            <div class="search-container">
+                <input type="text" id="search-input" placeholder="Search for a song...">
+                <button id="search-btn">Buscar</button>
             </div>
             <ul id="playlist-songs" class="list-group"></ul>
         </div>
